--- a/Home.html
+++ b/Home.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/Asset/css/index.css">
+    <link rel="stylesheet" href="/Asset/css/home.css">
     <title>Home</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="/Home.html"> <img class="" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
+        <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -25,16 +25,17 @@
         </button>
         <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link anavbar" href="/Home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link anavbar" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
+            <a class="nav-link anavbar" href="/Team.html">Team</a>
           </li><li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link anavbar" href="/Blog.html">Blog</a>
           </li>
+          <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
         </ul>
         </div>
       </div>
