--- a/Blog.html
+++ b/Blog.html
@@ -4,19 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="/Asset/css/home.css" />
     <title>Blog</title>
   </head>
   <body>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
+    <nav class="navbar navbar-expand-lg bg-white">
+      <div class="container">
+        <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="/Home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="/Team.html">Team</a>
+          </li><li class="nav-item">
+            <a class="nav-link anavbar" href="/Blog.html">Blog</a>
+          </li>
+          <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
+        </ul>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
