--- a/Home.html
+++ b/Home.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/Asset/css/home.css">
+    <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="/Asset/css/home.css" />
     <title>Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
+        <a class="navbar-brand" href="/Home.html">
+          <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -23,22 +25,303 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="/Home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="/Team.html">Team</a>
-          </li><li class="nav-item">
-            <a class="nav-link anavbar" href="/Blog.html">Blog</a>
-          </li>
-          <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
-        </ul>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 navbar1">
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Team.html">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Blog.html">Blog</a>
+            </li>
+            <li>
+              <a
+                class="btn btn-primary buttoncontact"
+                href="/Contact.html"
+                role="button"
+                >Contact</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
+    <div class="container-fluid isi">
+      <div class="row justify-content-start">
+        <div class="col-2"></div>
+        <div class="col-4 col1">
+          <img
+            class="img-fluid"
+            src="/Asset/images/Group 16136@2x@2x.png"
+            alt=""
+          />
+        </div>
+        <div class="col-4 col2">
+          <p class="hithere">HI THERE!</p>
+          <div class="tlsan">
+            <span class="weare" style="color: #19345e">We are an</span>
+            <span class="weare" style="color: #f47522">Alterra Academy.</span>
+          </div>
+          <span class="dskripsialterra"
+            >Alterra Academy Full-stack Program is Coding Bootcamp which
+            transform you being professional Software Engineer within 3
+            months.</span
+          >
+          <div>
+            <a
+              class="btn buttonteam buttonteamimg"
+              href="/Team.html"
+              role="button"
+            >
+              More About Team</a
+            >
+          </div>
+        </div>
+        <div class="col-2"></div>
+      </div>
+    </div>
+    <div class="row justify-content-center container-fluid">
+      <div class="col-8">
+        <div class="row yearjob shadow">
+          <div class="col-4">
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col-2">
+                <span
+                  class="rewardimg d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    class="img-reward"
+                    src="/Asset/images/reward.png"
+                    alt=""
+                  />
+                </span>
+              </div>
+              <div class="col-4">
+                <div class="fw-bold text-capitalize">4 year job</div>
+                <div>Experience</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col-2">
+                <div
+                  class="projectimg d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    class="img-project"
+                    src="/Asset/images/project.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="fw-bold text-capitalize">500+ project</div>
+                <div>complete</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col-2">
+                <div
+                  class="supportimg d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    class="img-support"
+                    src="/Asset/images/support.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="fw-bold text-capitalize">support</div>
+                <div>online 24/7</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="row d-flex justify-content-center align-items-center row-about"
+      >
+        <div class="col-8 row">
+          <div class="col-3"></div>
+          <div class="col-6">
+            <div class="row align-items-center fw-bold">
+              <div class="col-2"></div>
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+              <div class="col-4 text-center weare">About</div>
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+              <div class="col-2"></div>
+            </div>
+          </div>
+          <div class="col-3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="gmbarbackgroundhome">
+        <div class="gmbarbackgroundhomeopacity">
+          <div
+            class="d-flex text-center align-items-center"
+            style="height: 100%"
+          >
+            <div class="col-3"></div>
+            <div class="col-6">
+              <div class="alterrais justify-content-center">
+                Alterra is For Everyone
+              </div>
+              <div class="asabrandnew">
+                As a brandnew Catalyst, we are aiming to become one of the best
+                tech companies in Indonesia. Joining the tech industry in
+                Indonesia since 2015 under the name of Sepulsa, we have evolved
+                as a B2B tech company in 4 years providing various services such
+                as Bill Payment Aggregator, Distribution Network, Promotion
+                Platform, and Tech Academy.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="row d-flex justify-content-center align-items-center row-meat"
+      >
+        <div class="col-8 row">
+          <div class="col-2"></div>
+          <div class="col-8">
+            <div class="row align-items-center fw-bold">
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+              <div class="col-8 text-center weare">Meat Our Team</div>
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-2"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col-8 row">
+          <div class="col-2"></div>
+          <div class="col-8">
+            <div class="row align-items-center">
+              <div class="col-2"></div>
+              <div
+                class="col-8 text-center fw-bold"
+                style="font-family: mulish"
+              >
+                Our Team Consists Only of the Best Talents
+              </div>
+              <div class="col-2"></div>
+            </div>
+          </div>
+          <div class="col-2"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container cardhome">
+      <div
+        class="row d-flex justify-content-center align-items-center"
+        style="height: 50vh"
+      >
+        <div class="col-11 row" style="height: 50vh">
+          <div class="col-4 d-flex justify-content-center align-items-end">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/shutterstock_796346011@2x.png"
+                class="card-img-bottom"
+                alt="..."
+              />
+              <div class="card-body text-center">
+                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
+                  Aulia Rahmani
+                </h4>
+                <p>UI UX Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 d-flex justify-content-center align-items-start">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/shutterstock_796346011@2x.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body text-center">
+                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
+                  Cindy Felita
+                </h4>
+                <p>Backend Development</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 d-flex justify-content-center align-items-end">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/shutterstock_796346011@2x.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body text-center">
+                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
+                  Winda Pramesti
+                </h4>
+                <p>Frontend Development</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-11 text-end">
+          <a class="checknow" href="/Team.html"> Check Now</a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="row d-flex justify-content-center align-items-center row-meat"
+      >
+        <div class="col-8 row">
+          <div class="col-2"></div>
+          <div class="col-6">
+            <div class="row align-items-center fw-bold">
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+              <div class="col-8 text-center weare">Latest Blogs</div>
+              <div class="col-2">
+                <div class="hr"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-2"></div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
