--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
+        <a class="navbar-brand" href="/Home.html">
+          <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -23,22 +25,40 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="/Home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link anavbar" href="/Team.html">Team</a>
-          </li><li class="nav-item">
-            <a class="nav-link anavbar" href="/Blog.html">Blog</a>
-          </li>
-          <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
-        </ul>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 navbar1">
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Team.html">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link anavbar" href="/Blog.html">Blog</a>
+            </li>
+            <li>
+              <a
+                class="btn btn-primary buttoncontact"
+                href="/Contact.html"
+                role="button"
+                >Contact</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
