--- a/Home.html
+++ b/Home.html
@@ -318,6 +318,96 @@
         </div>
       </div>
     </div>
+    <div class="container cardhome">
+      <div
+        class="row d-flex justify-content-center align-items-center"
+        style="height: 50vh"
+      >
+        <div class="col-11 row" style="height: 50vh">
+          <div class="col-4 d-flex justify-content-center align-items-start">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/img_article.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
+                  CREATE A WORDPRESS THEME FROM SCRATCH
+                </h4>
+                <div class="row" style="color: gray; margin-bottom: 10px">
+                  <div class="col-4">Larry Stark</div>
+                  <div class="col-3"></div>
+                  <div class="col-5">7 Januari 2020</div>
+                </div>
+                <div class="col-10" style="font-family: 'mulish;">
+                  Quick six blind smart out burst. Perfectly on furniture
+                  dejection determine my depending an to. Add short water court
+                  fat…
+                </div>
+                <div class="text-end">
+                  <a class="readmore" href="/Blog.html">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 d-flex justify-content-center align-items-start">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/img_article.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
+                  CREATE A WORDPRESS THEME FROM SCRATCH
+                </h4>
+                <div class="row" style="color: gray; margin-bottom: 10px">
+                  <div class="col-4">Larry Stark</div>
+                  <div class="col-3"></div>
+                  <div class="col-5">7 Januari 2020</div>
+                </div>
+                <div class="col-10" style="font-family: 'mulish;">
+                  Quick six blind smart out burst. Perfectly on furniture
+                  dejection determine my depending an to. Add short water court
+                  fat…
+                </div>
+                <div class="text-end">
+                  <a class="readmore" href="/Blog.html">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 d-flex justify-content-center align-items-start">
+            <div style="width: 18rem">
+              <img
+                src="/Asset/images/img_article.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
+                  CREATE A WORDPRESS THEME FROM SCRATCH
+                </h4>
+                <div class="row" style="color: gray; margin-bottom: 10px">
+                  <div class="col-4">Larry Stark</div>
+                  <div class="col-3"></div>
+                  <div class="col-5">7 Januari 2020</div>
+                </div>
+                <div class="col-10" style="font-family: 'mulish;">
+                  Quick six blind smart out burst. Perfectly on furniture
+                  dejection determine my depending an to. Add short water court
+                  fat…
+                </div>
+                <div class="text-end">
+                  <a class="readmore" href="/Blog.html">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
