--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-white">
+    <nav class="navbar navbar-expand-lg bg-white shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="/Home.html">
           <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""
