blog page dan font

--- a/Contact.html
+++ b/Contact.html
@@ -40,11 +40,11 @@
               <a class="nav-link anavbar" href="/Team.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link anavbar" href="/Blog.html">Blog</a>
+              <a class="nav-link anavbar muli" href="/Blog.html">Blog</a>
             </li>
             <li>
               <a
-                class="btn btn-primary buttoncontact"
+                class="btn btn-primary buttoncontact muli"
                 href="/Contact.html"
                 role="button"
                 >Contact</a
