--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <a
-                class="btn btn-primary buttoncontact"
+                class="btn btn-primary buttoncontact muli"
                 href="/Contact.html"
                 role="button"
                 >Contact</a
@@ -65,19 +65,19 @@
           />
         </div>
         <div class="col-4 col2">
-          <p class="hithere">HI THERE!</p>
+          <p class="hithere muli">HI THERE!</p>
           <div class="tlsan">
             <span class="weare" style="color: #19345e">We are an</span>
             <span class="weare" style="color: #f47522">Alterra Academy.</span>
           </div>
-          <span class="dskripsialterra"
+          <span class="dskripsialterra muli"
             >Alterra Academy Full-stack Program is Coding Bootcamp which
             transform you being professional Software Engineer within 3
             months.</span
           >
           <div>
             <a
-              class="btn buttonteam buttonteamimg"
+              class="btn buttonteam buttonteamimg muli"
               href="/Team.html"
               role="button"
             >
@@ -106,7 +106,7 @@
               </div>
               <div class="col-4">
                 <div class="fw-bold text-capitalize">4 year job</div>
-                <div>Experience</div>
+                <div class="muli">Experience</div>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
               </div>
               <div class="col-4">
                 <div class="fw-bold text-capitalize">500+ project</div>
-                <div>complete</div>
+                <div class="muli">complete</div>
               </div>
             </div>
           </div>
@@ -144,7 +144,7 @@
               </div>
               <div class="col-4">
                 <div class="fw-bold text-capitalize">support</div>
-                <div>online 24/7</div>
+                <div class="muli">online 24/7</div>
               </div>
             </div>
           </div>
@@ -163,11 +163,10 @@
               <div class="col-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-4 text-center weare">About</div>
+              <div class="col-5 text-center weare muli">About</div>
               <div class="col-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-2"></div>
             </div>
           </div>
           <div class="col-3"></div>
@@ -183,10 +182,10 @@
           >
             <div class="col-3"></div>
             <div class="col-6">
-              <div class="alterrais justify-content-center">
+              <div class="alterrais justify-content-center muli">
                 Alterra is For Everyone
               </div>
-              <div class="asabrandnew">
+              <div class="asabrandnew muli">
                 As a brandnew Catalyst, we are aiming to become one of the best
                 tech companies in Indonesia. Joining the tech industry in
                 Indonesia since 2015 under the name of Sepulsa, we have evolved
@@ -210,7 +209,7 @@
               <div class="col-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-8 text-center weare">Meat Our Team</div>
+              <div class="col-8 text-center weare muli">Meat Our Team</div>
               <div class="col-2">
                 <div class="hr"></div>
               </div>
@@ -248,52 +247,65 @@
         <div class="col-11 row" style="height: 50vh">
           <div class="col-4 d-flex justify-content-center align-items-end">
             <div style="width: 18rem">
+              <div class="justify-content-start">
+                <div class="kotak"></div>
+              </div>
               <img
                 src="/Asset/images/shutterstock_796346011@2x.png"
                 class="card-img-bottom"
                 alt="..."
               />
               <div class="card-body text-center">
-                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
+                <h4 style="font-weight: bold; color: #f47522; margin-top: 30px">
                   Aulia Rahmani
                 </h4>
-                <p>UI UX Designer</p>
+                <p class="poppins">UI UX Designer</p>
               </div>
             </div>
           </div>
           <div class="col-4 d-flex justify-content-center align-items-start">
             <div style="width: 18rem">
-              <img
-                src="/Asset/images/shutterstock_796346011@2x.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body text-center">
-                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
-                  Cindy Felita
-                </h4>
-                <p>Backend Development</p>
+              <div class="justify-content-start">
+                <div class="kotak2"></div>
+                <img
+                  src="/Asset/images/shutterstock_796346011@2x.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h4
+                    style="font-weight: bold; color: #f47522; margin-top: 30px"
+                  >
+                    Cindy Felita
+                  </h4>
+                  <p class="poppins">Backend Development</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-4 d-flex justify-content-center align-items-end">
             <div style="width: 18rem">
-              <img
-                src="/Asset/images/shutterstock_796346011@2x.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body text-center">
-                <h4 style="font-weight: bold; color: #f47522; margin-top: 20px">
-                  Winda Pramesti
-                </h4>
-                <p>Frontend Development</p>
+              <div class="justify-content-start">
+                <div class="kotak3"></div>
+                <img
+                  src="/Asset/images/shutterstock_796346011@2x.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h4
+                    style="font-weight: bold; color: #f47522; margin-top: 30px"
+                  >
+                    Winda Pramesti
+                  </h4>
+                  <p class="poppins">Frontend Development</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-11 text-end">
-          <a class="checknow" href="/Team.html"> Check Now</a>
+          <a class="checknow muli" href="/Team.html"> Check Now</a>
         </div>
       </div>
     </div>
@@ -335,12 +347,20 @@
                 <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
                   CREATE A WORDPRESS THEME FROM SCRATCH
                 </h4>
-                <div class="row" style="color: gray; margin-bottom: 10px">
+                <div
+                  class="row"
+                  style="
+                    color: gray;
+                    margin-bottom: 10px;
+                    font-family: 'Poppins';
+                    font-size: 15px;
+                  "
+                >
                   <div class="col-4">Larry Stark</div>
-                  <div class="col-3"></div>
-                  <div class="col-5">7 Januari 2020</div>
+                  <div class="col-2"></div>
+                  <div class="col-6">7 Januari 2020</div>
                 </div>
-                <div class="col-10" style="font-family: 'mulish;">
+                <div class="col-10 poppins">
                   Quick six blind smart out burst. Perfectly on furniture
                   dejection determine my depending an to. Add short water court
                   fat…
@@ -362,12 +382,20 @@
                 <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
                   CREATE A WORDPRESS THEME FROM SCRATCH
                 </h4>
-                <div class="row" style="color: gray; margin-bottom: 10px">
+                <div
+                  class="row"
+                  style="
+                    color: gray;
+                    margin-bottom: 10px;
+                    font-family: 'Poppins';
+                    font-size: 15px;
+                  "
+                >
                   <div class="col-4">Larry Stark</div>
-                  <div class="col-3"></div>
-                  <div class="col-5">7 Januari 2020</div>
+                  <div class="col-2"></div>
+                  <div class="col-6">7 Januari 2020</div>
                 </div>
-                <div class="col-10" style="font-family: 'mulish;">
+                <div class="col-10 poppins">
                   Quick six blind smart out burst. Perfectly on furniture
                   dejection determine my depending an to. Add short water court
                   fat…
@@ -389,12 +417,20 @@
                 <h4 style="font-weight: bold; color: #19345e; margin-top: 20px">
                   CREATE A WORDPRESS THEME FROM SCRATCH
                 </h4>
-                <div class="row" style="color: gray; margin-bottom: 10px">
+                <div
+                  class="row"
+                  style="
+                    color: gray;
+                    margin-bottom: 10px;
+                    font-family: 'Poppins';
+                    font-size: 15px;
+                  "
+                >
                   <div class="col-4">Larry Stark</div>
-                  <div class="col-3"></div>
-                  <div class="col-5">7 Januari 2020</div>
+                  <div class="col-2"></div>
+                  <div class="col-6">7 Januari 2020</div>
                 </div>
-                <div class="col-10" style="font-family: 'mulish;">
+                <div class="col-10 poppins">
                   Quick six blind smart out burst. Perfectly on furniture
                   dejection determine my depending an to. Add short water court
                   fat…
