--- a/Blog.html
+++ b/Blog.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <a
-                class="btn btn-primary buttoncontact"
+                class="btn btn-primary buttoncontact muli"
                 href="/Contact.html"
                 role="button"
                 >Contact</a
@@ -67,7 +67,7 @@
               <div class="col-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-4 text-center weare">Blog</div>
+              <div class="col-4 text-center weare muli">Blog</div>
               <div class="col-2">
                 <div class="hr"></div>
               </div>
@@ -83,9 +83,9 @@
       <div
         class="row d-flex justify-content-center align-items-center muli howto"
       >
-        <div>HOW TO BE A SUCCESSFUL FREELANCER</div>
+        <div class="muli">HOW TO BE A SUCCESSFUL FREELANCER</div>
       </div>
-      <div class="larry">Larry Stark - 7 Januari 2020</div>
+      <div class="larry muli">Larry Stark - 7 Januari 2020</div>
     </div>
     <div class="container">
       <div class="row text-start" style="font-family: 'Poppins'; padding: 10px">
