--- a/Team.html
+++ b/Team.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <a
-                class="btn btn-primary buttoncontact"
+                class="btn btn-primary buttoncontact muli"
                 href="/Contact.html"
                 role="button"
                 >Contact</a
