--- a/Home.html
+++ b/Home.html
@@ -444,6 +444,56 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid footer">
+      <div class="container footer">
+        <div class="row">
+          <div class="col-4 d-flex align-items-center footer">
+            <img
+              class="logobawah"
+              src="/Asset/images/logo-ALTA-v2@2x.png"
+              alt=""
+            />
+          </div>
+          <div class="col-4 row text-start paddingfooter align-items-center">
+            <div class="col-4"></div>
+            <div class="col-8">
+              <div style="color: white; font-family: Arial; font-size: 14px">
+                Social Media
+              </div>
+              <div>
+                <a href="#">
+                  <img
+                    class="logokcl"
+                    style="margin-left: 0px"
+                    src="/Asset/images/ic_fb.png"
+                    alt=""
+                /></a>
+                <a href="#">
+                  <img
+                    class="logokcl"
+                    src="/Asset/images/ic_twitter.png"
+                    alt=""
+                /></a>
+                <a href="#">
+                  <img class="logokcl" src="/Asset/images/ic_ig.png" alt=""
+                /></a>
+                <a href="#">
+                  <img
+                    class="logokcl"
+                    src="/Asset/images/ic_linkedin.png"
+                    alt=""
+                /></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4 row paddingfooter text-end align-items-center">
+            <div style="color: white; font-family: Arial; font-size: 14px">
+              <span>Copyright © 2019 Alterra</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
