--- a/Blog.html
+++ b/Blog.html
@@ -129,9 +129,9 @@
       </div>
     </div>
     <div class="container-fluid footer">
-      <div class="container footer">
+      <div class="container">
         <div class="row">
-          <div class="col-4 d-flex align-items-center footer">
+          <div class="col-4 d-flex align-items-center">
             <img
               class="logobawah"
               src="/Asset/images/logo-ALTA-v2@2x.png"
