--- a/Home.html
+++ b/Home.html
@@ -447,7 +447,7 @@
     <div class="container-fluid footer">
       <div class="container footer">
         <div class="row">
-          <div class="col-4 d-flex align-items-center footer">
+          <div class="col-4 d-flex align-items-center">
             <img
               class="logobawah"
               src="/Asset/images/logo-ALTA-v2@2x.png"
