--- a/Home.html
+++ b/Home.html
@@ -445,7 +445,7 @@
       </div>
     </div>
     <div class="container-fluid footer">
-      <div class="container footer">
+      <div class="container">
         <div class="row">
           <div class="col-4 d-flex align-items-center">
             <img
