--- a/Contact.html
+++ b/Contact.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="/Asset/css/home.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
     <title>Contact</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container">
-        <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
+        <a class="navbar-brand" href="#"> 
+          <img class="image" src="Asset/images/logo-ALTA@2x.png" width="150px">
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -32,13 +34,77 @@
           </li>
           <li class="nav-item">
             <a class="nav-link anavbar" href="/Team.html">Team</a>
-          </li><li class="nav-item">
+          </li>
+          <li class="nav-item">
             <a class="nav-link anavbar" href="/Blog.html">Blog</a>
           </li>
+          <div class="#">
           <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
         </ul>
-        </div>
       </div>
     </nav>
+    
+    <div class="container">
+      <div class="text-center">
+        <h1 class="display-6">
+          <span class="strip-oren">—</span>
+          Get in Touch
+          <span class="strip-oren">—</span>
+        </h1>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-4">
+          <div class="mt-2 mb-3">
+            <span>Phone</span> <br>
+            <span class="kiri-dikit"><img src="Asset/images/phone.png" width="15px"> +62 21 909 7890</span>
+          </div>
+          <div class="mt-2 mb-3">
+            <span>Email</span> <br>
+            <span class="kiri-dikit"><img src="Asset/images/envelope.png" width="15px"> info@alterra.id</span>
+          </div>
+          <div class="mt-2 mb-3">
+            <span>Website</span> <br>
+            <span class="kiri-dikit"><img src="Asset/images/browser.png" width="15px"> https://www.alterra.id/</span>
+          </div>
+          <div class="mt-2 mb-3">
+            <span>Social Profiles</span> <br>
+            <img src="Asset/images/facebook.png" width="20px"> 
+            <img src="Asset/images/twitter.png" width="20px"> 
+            <img src="Asset/images/instagram.png" width="20px"> 
+            <img src="Asset/images/linkedin.png" width="20px"> 
+          </div>
+        </div>
+        <div class="col-md-8">
+          <tr>
+              <td>If you have any suggestion, project or even you want to say, Hello..</td> 
+              <td><p>Please fill out the form bellow and i will reply you shortly.</td></p>
+          </tr>
+
+          <form action="#" class="mt-4 text-primary">
+            <div class="form-group mt-2 mb-3">
+              <label for="full-name" class="text-dark mb-2 text-danger">Full Name <span class="text-danger">*</span></label>
+              <input type="text" class="form-control" placeholder="Your Full Name">
+            </div>
+            <div class="form-group mt-2 mb-3">
+              <label for="email" class="text-dark mb-2">Email Address <span class="text-danger">*</span></label>
+              <input type="text" class="form-control" placeholder="Your Email Address">
+            </div>
+            <div class="form-group mt-2 mb-3">
+              <label for="phone" class="text-dark mb-2">Phone Number <span class="text-danger">*</span></label>
+              <input type="text" class="form-control" placeholder="Your Phone Number">
+            </div>
+            <div class="form-group mt-2 mb-3">
+              <label for="full-name" class="text-dark mb-2">Message <span class="text-danger">*</span></label>
+              <textarea name="message" id="" rows="5" class="form-control" placeholder="Your Message"></textarea>
+            </div>
+            <button class="btn btn-success button-message mt-3 mb-3">
+              <img src="Asset/images/send-mail.png" width="15px"> Send Message
+            </button>
+          </form>
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
