--- a/Contact.html
+++ b/Contact.html
@@ -80,21 +80,21 @@
               <td><p>Please fill out the form bellow and i will reply you shortly.</td></p>
           </tr>
 
-          <form action="#" class="mt-4 text-primary">
+          <form action="#" class="mt-4">
             <div class="form-group mt-2 mb-3">
-              <label for="full-name" class="text-dark mb-2 text-danger">Full Name <span class="text-danger">*</span></label>
+              <label for="full-name" class="text-dark mb-2"><span class="text-primary">Full Name</span> <span class="text-danger">*</span></label>
               <input type="text" class="form-control" placeholder="Your Full Name">
             </div>
             <div class="form-group mt-2 mb-3">
-              <label for="email" class="text-dark mb-2">Email Address <span class="text-danger">*</span></label>
+              <label for="email" class="text-dark mb-2"><span class="text-primary">Email Address</span><span class="text-danger">*</span></label>
               <input type="text" class="form-control" placeholder="Your Email Address">
             </div>
             <div class="form-group mt-2 mb-3">
-              <label for="phone" class="text-dark mb-2">Phone Number <span class="text-danger">*</span></label>
+              <label for="phone" class="text-dark mb-2"><span class="text-primary">Phone Number</span><span class="text-danger">*</span></label>
               <input type="text" class="form-control" placeholder="Your Phone Number">
             </div>
             <div class="form-group mt-2 mb-3">
-              <label for="full-name" class="text-dark mb-2">Message <span class="text-danger">*</span></label>
+              <label for="full-name" class="text-dark mb-2"><span class="text-primary">Message</span><span class="text-danger">*</span></label>
               <textarea name="message" id="" rows="5" class="form-control" placeholder="Your Message"></textarea>
             </div>
             <button class="btn btn-success button-message mt-3 mb-3">
