--- a/Blog.html
+++ b/Blog.html
@@ -55,26 +55,22 @@
       </div>
     </nav>
     <!-- nabar end -->
-    <div class="container">
+    <div class="container-fluid">
       <div
         class="row d-flex justify-content-center align-items-center row-about"
       >
-        <div class="col-8 row">
-          <div class="col-3"></div>
-          <div class="col-6">
+        <div class="col-lg-8 col-md-10 col-sm-12 offset-md-1 row">
+          <div class="col-lg-6 col-md-8 col-sm-10 offset-lg-2 offset-md-1">
             <div class="row align-items-center fw-bold">
-              <div class="col-2"></div>
-              <div class="col-2">
+              <div class="col-lg-2 col-md-3 col-sm-3 offset-sm-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-4 text-center weare muli">Blog</div>
-              <div class="col-2">
+              <div class="col-lg-6 col-md-4 col-sm-4 text-center weare muli">Blog</div>
+              <div class="col-lg-2 col-md-3 col-sm-3">
                 <div class="hr"></div>
               </div>
-              <div class="col-2"></div>
             </div>
           </div>
-          <div class="col-3"></div>
         </div>
       </div>
     </div>
@@ -129,55 +125,51 @@
       </div>
     </div>
     <div class="container-fluid footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-4 d-flex align-items-center">
-            <img
-              class="logobawah"
-              src="/Asset/images/logo-ALTA-v2@2x.png"
-              alt=""
-            />
-          </div>
-          <div class="col-4 row text-start paddingfooter align-items-center">
-            <div class="col-4"></div>
-            <div class="col-8">
-              <div style="color: white; font-family: Arial; font-size: 14px">
-                Social Media
-              </div>
-              <div>
-                <a href="#">
-                  <img
-                    class="logokcl"
-                    style="margin-left: 0px"
-                    src="/Asset/images/ic_fb.png"
-                    alt=""
-                /></a>
-                <a href="#">
-                  <img
-                    class="logokcl"
-                    src="/Asset/images/ic_twitter.png"
-                    alt=""
-                /></a>
-                <a href="#">
-                  <img class="logokcl" src="/Asset/images/ic_ig.png" alt=""
-                /></a>
-                <a href="#">
-                  <img
-                    class="logokcl"
-                    src="/Asset/images/ic_linkedin.png"
-                    alt=""
-                /></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-4 row paddingfooter text-end align-items-center">
+      <div class="row">
+        <div class="col-lg-1 offset-lg-2 col-md-3 col-sm-4 d-flex align-items-center">
+          <img
+            class="logobawah"
+            src="/Asset/images/logo-ALTA-v2@2x.png"
+            alt=""
+          />
+        </div>
+        <div class="col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-sm-4 row text-start paddingfooter align-items-center">
+          <div class="col-lg-8 col-md-10 col-sm-12 offset-lg-4">
             <div style="color: white; font-family: Arial; font-size: 14px">
-              <span>Copyright © 2019 Alterra</span>
+              Social Media
+            </div>
+            <div>
+              <a href="#">
+                <img
+                  class="logokcl"
+                  style="margin-left: 0px"
+                  src="/Asset/images/ic_fb.png"
+                  alt=""
+              /></a>
+              <a href="#">
+                <img
+                  class="logokcl"
+                  src="/Asset/images/ic_twitter.png"
+                  alt=""
+              /></a>
+              <a href="#">
+                <img class="logokcl" src="/Asset/images/ic_ig.png" alt=""
+              /></a>
+              <a href="#">
+                <img
+                  class="logokcl"
+                  src="/Asset/images/ic_linkedin.png"
+                  alt=""
+              /></a>
             </div>
           </div>
         </div>
+        <div class="col-lg-3 offset-lg-1- col-md-3 offset-md-1 col-sm-4 row paddingfooter align-items-center">
+          <div style="color: white; font-family: Arial; font-size: 14px">
+            <span>Copyright © 2019 Alterra</span>
+          </div>
+        </div>
       </div>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
