--- a/Home.html
+++ b/Home.html
@@ -34,7 +34,7 @@
               <a class="nav-link anavbar" href="/Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link anavbar" href="#">About</a>
+              <a class="nav-link anavbar" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link anavbar" href="/Team.html">Team</a>
@@ -151,7 +151,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div id="about" class="container">
       <div
         class="row d-flex justify-content-center align-items-center row-about"
       >
