--- a/Blog.html
+++ b/Blog.html
@@ -34,7 +34,7 @@
               <a class="nav-link anavbar" href="/Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link anavbar" href="#">About</a>
+              <a class="nav-link anavbar" href="/Home.html#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link anavbar" href="/Team.html">Team</a>
